--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,1 @@
-.content {
-  height: 500px;
-  display: none;
-}
-
-.content-display {
-  display: block;
-}
-
-.movie {
-  margin-bottom: 50px;
-}
-
-h2 {
-  color: black;
-  font-size: 30px;
-}
-/*# sourceMappingURL=style.css.map */
+/* No CSS *//*# sourceMappingURL=style.css.map */
