--- a/css/style.scss
+++ b/css/style.scss
@@ -1,17 +1,3 @@
-.content {
-    height: 500px;
-    display: none;
-}
-
-.content-display {
-    display: block;
-}
-
-.movie {
-    margin-bottom: 50px;
-}
-
-h2{
-    color: black;
-    font-size: 30px;
-}
+// .movie-detail,  .movie-reviews, .movie-trailer, .similar-movies{
+//     display: none;
+// }
