--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,7 @@
 // .movie-detail,  .movie-reviews, .movie-trailer, .similar-movies{
 //     display: none;
 // }
+.movie-detail2 ul{
+    display: flex;
+    width: 100%;
+}
