--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.movie-detail2 ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+/*# sourceMappingURL=style.css.map */
