--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,242 @@
-// .movie-detail,  .movie-reviews, .movie-trailer, .similar-movies{
-//     display: none;
-// }
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+$bgcolor: rgb(17, 16, 22);
+$contrastColor: rgb(14, 14, 17);
+
+body{
+    background-color: $bgcolor;
+    color: #ffffff;
+    width: 100%;
+    font-family: 'Mulish', sans-serif;
+    // min-height: 100%;
+}
+
+
+//header
+header{
+    background-color: rgb(24, 23, 29);
+    display: flex;
+    align-items: center;
+    padding: 3rem 0 0.7rem 0;
+    h1{
+       font-family: 'Black Han Sans', sans-serif;
+       font-weight: 100;
+       color: rgb(247, 241, 247);
+       color: rgb(119, 58, 168);
+    //    text-transform: uppercase;
+    }
+
+    .container{
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    form{
+        display: flex;
+        align-items: center;
+        span{
+            color: rgb(181, 177, 199);
+            // text-transform: uppercase;
+        }
+
+        select{
+            cursor: pointer;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: url("data:image/svg+xml;utf8,<svg fill='rgb(241, 235, 235)' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");            background-repeat: no-repeat;
+            background-position-x: 100%;
+            background-position-y: 5px;
+            background-color: rgb(44, 43, 51);
+            border: solid 1px rgb(48, 48, 53);
+            color: rgb(212, 200, 200);
+            padding: 0.5rem;
+            // border: none;
+            margin: 1px;
+            transition: 0.1s ease-in-out;
+        }
+
+        button{
+            cursor: pointer;
+            width: 75px;
+            padding: 0.5rem;
+            background-color: transparent;
+            color: rgb(212, 200, 200);
+            margin-left: 3px;
+            // border-radius: 1rem;
+            border: solid 1px rgb(84, 82, 99);
+            &:hover{
+                border: solid 1px rgb(111, 65, 148);
+                color: #f3eaea;
+                transition: 0.2s ease;
+            }
+        }
+    }
+
+    .search-container{
+        position: relative;
+    }
+
+    input{
+        background-color: rgb(44, 43, 51);
+        border: solid 1px rgb(48, 48, 53);
+        // border: solid 1px rgb(119, 58, 168);;
+        padding: 0.6rem;
+        border-radius: 0.1rem;
+        width: 500px;
+        color: rgb(231, 221, 221);
+        transition: 0.1s ease-in-out;
+    }
+    
+    input:focus{
+        border: solid 1px rgb(111, 65, 148);
+    }
+
+    select:focus{
+        border: solid 1px rgb(111, 65, 148);
+    }
+
+    #search{
+        cursor: pointer;
+        position: absolute;
+        background-color: transparent;
+        border: none;
+        top: 7px;
+        right: 10px;
+        font-size: 1.2rem;
+        color: rgb(91, 89, 104);
+    }
+}
+
+
+//Main content
+
+main{
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 10%;
+}
+
+//upcoming movies
+#upcoming-movies{
+
+    margin-top: 5%;
+    h1{
+        font-family: 'Black Han Sans', sans-serif;
+        font-family: 'Bebas Neue', cursive;
+        font-weight: 100;
+        letter-spacing: 2px;
+        font-size: 3rem;
+        border-bottom: solid 1px rgb(51, 29, 68);
+        margin-bottom: 1rem;
+    }
+
+    .movie-section{
+        display: flex;
+    }
+}
+
+//popular movies
+#popular-container{
+    margin-top: 5%;
+
+
+    h1{
+        font-family: 'Black Han Sans', sans-serif;
+        font-family: 'Bebas Neue', cursive;
+        font-weight: 100;
+        letter-spacing: 2px;
+        font-size: 3rem;
+        border-bottom: solid 1px rgb(51, 29, 68);
+    }
+    
+    img{
+        max-width: 100%;
+        cursor: pointer;
+        transition: 0.3s ease-in-out;
+        &:hover{
+            // border: solid 1px rgb(111, 65, 148);
+            transform: scale(1.1);
+        }
+    }
+
+    .popular-pagination{
+        display: flex;
+        justify-content: center;
+        margin-top: 2rem;
+        button{
+            cursor: pointer;
+            background-color: transparent;
+            border: solid 2px rgb(111, 65, 148);
+            border: solid 2px rgb(64, 36, 85);;
+            font-size: 1rem;
+            // padding: 0.4rem;
+            margin: 0.2rem;
+            border-radius: 5rem;
+            color: rgb(150, 147, 170);
+            width: 35px;
+            height: 35px;
+        }
+    }
+
+    .movie-section{
+        display: grid;
+        grid-template-columns: repeat(auto-fit,minmax(240px, 1fr));
+        grid-gap: 2rem;
+        grid-row-gap: 2rem;
+        margin-top: 1rem;
+        // height: 100vh;
+    }
+}
+
+
+//footer
+footer{
+    // position: absolute;
+    // bottom: 0;
+    width: 100%;
+    height: 2.5rem; 
+    // margin-top: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(133, 26, 92);
+}
+
+
+
+
+
+
+
+
 .movie-detail2 ul{
     display: flex;
     width: 100%;
 }
 
-#filter-prev, #filter-next{
+
+.pagination-btn{
+    display: none;
+}
+
+.show{
+    display: flex;
+
+}
+
+#filtered-movies h1 {
+    display: none;
+}
+
+.hide{
     display: none;
 }
