--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-$bgcolor: rgb(17, 16, 22);
+$bgcolor: rgb(10, 10, 14);
 $contrastColor: rgb(14, 14, 17);
 
 body{
@@ -16,25 +17,32 @@ body{
     width: 100%;
     font-family: 'Mulish', sans-serif;
     // min-height: 100%;
+    overflow-x: hidden;
 }
 
 
 //header
 header{
-    background-color: rgb(24, 23, 29);
+    background-color: rgba(24, 23, 29, 0.863);
+    // background-color: transparent;
+    // margin: 0 auto;
     display: flex;
     align-items: center;
-    padding: 3rem 0 0.7rem 0;
+    padding: 2rem 1.3rem 1.3rem 1.3rem;
+    border-radius: 0 0 0.1rem 0.1rem;
+    width: 100%;
+    justify-content: space-between;
     h1{
        font-family: 'Black Han Sans', sans-serif;
        font-weight: 100;
        color: rgb(247, 241, 247);
-       color: rgb(119, 58, 168);
+       color: rgb(158, 61, 238);
     //    text-transform: uppercase;
     }
 
     .container{
         width: 80%;
+        // background-color: rgb(24, 23, 29);
         margin: 0 auto;
         display: flex;
         justify-content: space-between;
@@ -44,7 +52,8 @@ header{
         display: flex;
         align-items: center;
         span{
-            color: rgb(181, 177, 199);
+            color: rgb(239, 238, 245);
+            color: rgba(134, 130, 148, 0.863);
             // text-transform: uppercase;
         }
 
@@ -52,16 +61,24 @@ header{
             cursor: pointer;
             -webkit-appearance: none;
             -moz-appearance: none;
-            background-image: url("data:image/svg+xml;utf8,<svg fill='rgb(241, 235, 235)' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");            background-repeat: no-repeat;
+            background-image: url("data:image/svg+xml;utf8,<svg fill='rgba(165, 160, 187, 0.795)' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");            background-repeat: no-repeat;
             background-position-x: 100%;
             background-position-y: 5px;
             background-color: rgb(44, 43, 51);
-            border: solid 1px rgb(48, 48, 53);
-            color: rgb(212, 200, 200);
+            background-color: rgba(24, 23, 29, 0.89);
+            // background-color: rgba(158, 61, 238, 0.438);
+            border: solid 1px rgba(53, 50, 66, 0.863);
+            // border: solid 1px rgba(158, 61, 238, 0.438);
+            color: rgba(165, 160, 187, 0.795);
             padding: 0.5rem;
             // border: none;
             margin: 1px;
             transition: 0.1s ease-in-out;
+            &:hover{
+                border: solid 1px rgb(111, 65, 148);
+                color: #f3eaea;
+                transition: 0.2s ease;
+            }
         }
 
         button{
@@ -69,10 +86,11 @@ header{
             width: 75px;
             padding: 0.5rem;
             background-color: transparent;
-            color: rgb(212, 200, 200);
+            // background-color: rgba(158, 61, 238, 0.438);
+            color: rgba(241, 241, 241, 0.664);
             margin-left: 3px;
             // border-radius: 1rem;
-            border: solid 1px rgb(84, 82, 99);
+            border: solid 1px rgba(53, 50, 66, 0.863);
             &:hover{
                 border: solid 1px rgb(111, 65, 148);
                 color: #f3eaea;
@@ -87,22 +105,26 @@ header{
 
     input{
         background-color: rgb(44, 43, 51);
-        border: solid 1px rgb(48, 48, 53);
-        // border: solid 1px rgb(119, 58, 168);;
+        // background-color: rgba(158, 61, 238, 0.438);
+        background-color: transparent;
+        border: solid 1px rgba(53, 50, 66, 0.863);
+        // border: solid 1px rgba(158, 61, 238, 0.438);
+        // border: solid 2px rgba(218, 196, 236, 0.705);
         padding: 0.6rem;
         border-radius: 0.1rem;
         width: 500px;
-        color: rgb(231, 221, 221);
+        color: rgb(247, 242, 242);
+        color: rgba(222, 220, 231, 0.849);
         transition: 0.1s ease-in-out;
     }
     
     input:focus{
-        border: solid 1px rgb(111, 65, 148);
+        border: solid 1px rgba(158, 61, 238, 0.658);
     }
 
-    select:focus{
-        border: solid 1px rgb(111, 65, 148);
-    }
+    // select:focus{
+    //     border: solid 1px rgba(158, 61, 238, 0.658);
+    // }
 
     #search{
         cursor: pointer;
@@ -113,21 +135,84 @@ header{
         right: 10px;
         font-size: 1.2rem;
         color: rgb(91, 89, 104);
+        color: rgba(78, 69, 85, 0.644)
+    }
+}
+// linear rgba(7, 7, 7, 0.61)  rgba(87, 29, 126, 0.329)   rgba(129, 17, 204, 0.329)
+#landing-page{
+    // width: 80%;
+    width: 100vw;
+    margin: 0 auto;
+    // background-color: rgb(24, 23, 29);
+    background: linear-gradient( rgba(34, 33, 33, 0.733), rgba(113, 34, 165, 0.329)), url('https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg');
+    // background: url('https://image.tmdb.org/t/p/original/f5F4cRhQdUbyVbB5lTNCwUzD6BP.jpg');
+    background-position: top;
+    background-size: 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    // justify-content: center;
+    // padding: 4rem;
+    border-bottom: solid 1px rgb(158, 61, 238);
+    // border-radius: 0 0 1rem 1rem;
+    .landing-txt{
+        width: 500px;
+        // background-color: rgb(157, 68, 226);;
+        // padding: 1rem;
+        border-radius: 0.1rem;
+        position: absolute;
+        top: 40%;
+        h2{
+            text-transform: uppercase;
+            font-weight: 100;
+            letter-spacing: 1px;
+            // font-family: 'Black Han Sans', sans-serif;
+            font-family: 'Anton', sans-serif;
+            color: rgb(238, 225, 248);
+            font-size: 2.4rem;
+        }
+
+        p{
+            color: rgb(226, 192, 248)
+        }
+    }
+
+    .container{
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        // background-color: red;
     }
 }
 
 
 //Main content
-
 main{
     width: 80%;
     margin: 0 auto;
     margin-bottom: 10%;
+    margin-top: -6%;
 }
 
 //upcoming movies
 #upcoming-slide{
-    // position: relative;
+    .title-section{
+        display: flex;
+        border-bottom: solid 1px rgba(38, 38, 48, 0.37);
+        span{
+            background-color: rgb(157, 68, 226);
+            width: 5px;
+            height: 35px;
+            border: solid 1px rgb(157, 68, 226);
+            // margin-top: 0.7rem;
+            // padding: 0.1rem;
+            margin-right: 0.4rem;
+        }
+    }
+
     .swiper-slide{
         position: relative;
         display: flex;
@@ -143,11 +228,14 @@ main{
             font-weight: 100;
             margin-top: 0.3rem;
             color: rgb(157, 148, 199);
-            font-size: 1.1rem;
+            font-size: 0.8rem;
             letter-spacing: 1px;
             // width: 100%;
             // text-align: center;
-            font-family: 'Bebas Neue', cursive;
+            // font-family: 'Bebas Neue', cursive;
+            // font-family: 'Anton', sans-serif;
+            color: rgb(238, 225, 248);
+            color: rgb(230, 207, 245);
         }
     }
 
@@ -156,9 +244,10 @@ main{
         font-weight: 100;
         letter-spacing: 2px;
         font-size: 3rem;
-        border-bottom: solid 1px rgb(51, 29, 68);
-        color: rgb(90, 90, 117);
-        color: rgb(216, 210, 221);
+        // border-bottom: solid 1px rgb(51, 29, 68);
+        // color: rgb(238, 233, 241);
+        color: rgb(238, 225, 248);
+        font-size: 2rem;
     }
 
     margin-top: 10%;
@@ -189,37 +278,83 @@ main{
         position: relative;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        // align-items: center;
         padding: 0 0 1rem 0;
         transition: 0.3s ease;
 
         .movie-title{
-            margin-top: 0.7rem;
+            margin-top: 0.5rem;
             text-align: center;
+            // font-size: 0.9rem;
+            // color: rgba(198, 198, 243, 0.781);
+            // color: rgba(192, 165, 212, 0.432);
+            // color: rgb(158, 68, 226);
+            // letter-spacing: 0.1rem;
+            color: rgba(226, 192, 248, 0.836);
         }
 
+        // .movie-info{
+        //     display: flex;
+        //     flex-direction: column;
+        //     margin-top: 0.9rem;
+        //     // justify-content: space-between;
+        //     align-items: center;
+        // }
+
+        .movie-stars{
+            display: flex;
+        }
         .movie-rating{
+            display: flex;
             position: absolute;
             top: 0;
             right: 0;
-            background-color:rgba(157, 68, 226, 0.671);
+            background-color:rgba(157, 68, 226, 0.836);
             padding: 0.3rem;
-            font-weight: 100;
-            font-family: 'Bebas Neue', cursive;
+            color: rgb(243, 236, 236);
+            // font-weight: bold;
+            // font-family: 'Bebas Neue', cursive;
 
+            p{
+                font-size: 0.8rem;
+            }
+
+            i{
+                margin-right: 0.3rem;
+                font-size: 0.8rem;
+            }
+
+        }
+    }
+
+    .title-section{
+        display: flex;
+        border-bottom: solid 1px rgba(38, 38, 48, 0.37);
+        span{
+            background-color: rgb(157, 68, 226);
+            width: 5px;
+            height: 35px;
+            border: solid 1px rgb(157, 68, 226);
+            // margin-top: 0.7rem;
+            // padding: 0.1rem;
+            margin-right: 0.4rem;
         }
     }
 
 
     h1{
+        // position: relative;
         // font-family: 'Black Han Sans', sans-serif;
         font-family: 'Bebas Neue', cursive;
         font-weight: 100;
         letter-spacing: 2px;
         font-size: 3rem;
-        border-bottom: solid 1px rgb(51, 29, 68);
-        color: rgb(204, 194, 255);
-        color: rgb(216, 210, 221);
+        // border-bottom: solid 1px rgb(51, 29, 68);
+        // color: rgb(204, 194, 255);
+        color: rgb(238, 225, 248);
+        // margin-left: 4rem;
+        // font-size: rem;
+        font-size: 2rem;
     }
     
     img{
@@ -239,25 +374,27 @@ main{
         button{
             cursor: pointer;
             background-color: transparent;
-            border: solid 2px rgb(111, 65, 148);
-            border: solid 2px rgb(64, 36, 85);;
+            // border: solid 2px rgb(111, 65, 148);
+            border: solid 2px rgba(168, 83, 224, 0.233);
             font-size: 1rem;
             // padding: 0.4rem;
             margin: 0.2rem;
             border-radius: 6rem;
             color: rgb(129, 120, 175);
-            width: 50px;
-            height: 50px;
+            color: rgba(226, 192, 248, 0.692);
+            font-size: 0.8rem;
+            width: 40px;
+            height: 40px;
             &:hover{
-                background-color: rgb(111, 65, 148);
-                color: white;
+                background-color: rgba(168, 83, 224, 0.233);
+                color: rgb(240, 233, 233);
             }
         }
     }
 
     #popular-movies{
         display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(240px, 1fr));
+        grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
         grid-gap: 2rem;
         grid-row-gap: 2rem;
         margin-top: 1rem;
