--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,17 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  width: 80%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 header {
   background-color: rgba(24, 23, 29, 0.863);
   display: -webkit-box;
@@ -39,17 +50,6 @@ header h1 {
   color: #9e3dee;
 }
 
-header .container {
-  width: 80%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
 header form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -60,7 +60,8 @@ header form {
 }
 
 header form span {
-  color: rgba(134, 130, 148, 0.863);
+  color: rgba(230, 207, 245, 0.658);
+  letter-spacing: 1px;
 }
 
 header form select {
@@ -73,7 +74,8 @@ header form select {
   background-position-y: 5px;
   background-color: rgba(24, 23, 29, 0.89);
   border: solid 1px rgba(53, 50, 66, 0.863);
-  color: rgba(165, 160, 187, 0.795);
+  letter-spacing: 1px;
+  color: rgba(230, 207, 245, 0.644);
   padding: 0.5rem;
   margin: 1px;
   -webkit-transition: 0.1s ease-in-out;
@@ -82,7 +84,7 @@ header form select {
 
 header form select:hover {
   border: solid 1px #6f4194;
-  color: #f3eaea;
+  color: rgba(226, 192, 248, 0.959);
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
@@ -92,14 +94,15 @@ header form button {
   width: 75px;
   padding: 0.5rem;
   background-color: transparent;
-  color: rgba(241, 241, 241, 0.664);
+  color: rgba(230, 207, 245, 0.644);
+  letter-spacing: 1px;
   margin-left: 3px;
   border: solid 1px rgba(53, 50, 66, 0.863);
 }
 
 header form button:hover {
-  border: solid 1px #6f4194;
-  color: #f3eaea;
+  border: solid 1px rgba(179, 95, 235, 0.582);
+  color: rgba(226, 192, 248, 0.959);
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
@@ -138,8 +141,8 @@ header #search {
 #landing-page {
   width: 100vw;
   margin: 0 auto;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(34, 33, 33, 0.733)), to(rgba(113, 34, 165, 0.329))), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg");
-  background: linear-gradient(rgba(34, 33, 33, 0.733), rgba(113, 34, 165, 0.329)), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(34, 33, 33, 0.733)), to(rgba(116, 44, 163, 0.329))), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg");
+  background: linear-gradient(rgba(34, 33, 33, 0.733), rgba(116, 44, 163, 0.329)), url("https://image.tmdb.org/t/p/original/orjiB3oUIsyz60hoEqkiGpy5CeO.jpg");
   background-position: top;
   background-size: 100%;
   height: 70vh;
@@ -154,8 +157,7 @@ header #search {
       -ms-flex-align: center;
           align-items: center;
   position: relative;
-  border-bottom: solid 1px rgba(158, 61, 238, 0.5);
-  z-index: -1;
+  border-bottom: solid 1px rgba(158, 61, 238, 0.164);
 }
 
 #landing-page .landing-txt {
@@ -176,17 +178,6 @@ header #search {
 
 #landing-page .landing-txt p {
   color: #e2c0f8;
-}
-
-#landing-page .container {
-  width: 80%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 main {
@@ -399,7 +390,44 @@ main .movies-filter {
   margin-top: 5%;
 }
 
+#movie-banner {
+  width: 100vw;
+  margin: 0 auto;
+  background-position: top;
+  background-size: 100%;
+  height: 50vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+#movie-banner #searchInput,
+#movie-banner #search {
+  display: none;
+}
+
+#movie-banner a {
+  text-decoration: none;
+  color: rgba(230, 207, 245, 0.911);
+  letter-spacing: 1px;
+  font-size: 0.9rem;
+  background-color: transparent;
+  border: solid 1px rgba(53, 50, 66, 0.863);
+  padding: 0.5rem 1rem;
+}
+
 #movie-detail {
+  margin-top: 10%;
+  z-index: 10;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -413,13 +441,42 @@ main .movies-filter {
   list-style: none;
 }
 
-#movie-detail .details-container {
-  margin-top: 10%;
+#movie-detail .poster-movie {
+  position: relative;
+  width: 100%;
+}
+
+#movie-detail .poster-movie span {
+  position: absolute;
+  bottom: 5rem;
+  right: 50%;
+}
+
+#movie-detail .poster-movie img {
+  max-width: 80%;
+  margin-top: -35%;
+}
+
+#movie-detail .poster-movie .bgimg {
+  position: absolute;
+  right: 105px;
+  top: -155px;
+  background-color: #9e3dee;
+  border-radius: 0.1rem;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(167, 70, 247, 0.856)), to(#3c1068));
+  background-image: linear-gradient(to bottom right, rgba(167, 70, 247, 0.856), #3c1068);
+  width: 490px;
+  height: 700px;
+  z-index: -1;
 }
 
 #movie-detail .details-container .similar-title {
   margin-top: 3rem;
   margin-bottom: -0.5rem;
+}
+
+#movie-detail .details-container .overview {
+  width: 100%;
 }
 
 #movie-detail .details-container .overview p {
@@ -429,6 +486,7 @@ main .movies-filter {
 
 #movie-detail .details-container .detail-info {
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 #movie-detail .details-container .detail-info li .contrast {
@@ -443,9 +501,14 @@ main .movies-filter {
   background-color: transparent;
   color: #eee1f8;
   padding: 0.6rem 2rem;
-  border: solid 2px rgba(158, 61, 238, 0.87);
+  border: none;
   margin-top: 1rem;
   letter-spacing: 1px;
+  color: #e6cff5;
+  letter-spacing: 2px;
+  font-size: 0.9rem;
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
 }
 
 #movie-detail .details-container .similar-movies {
@@ -455,7 +518,11 @@ main .movies-filter {
       grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   grid-gap: 2rem;
   width: 520px;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+}
+
+#movie-detail .details-container .similar-movies div img {
+  width: 150px;
 }
 
 .movie-reviews {
@@ -481,13 +548,14 @@ main .movies-filter {
 .movie-reviews a {
   text-decoration: none;
   color: #eee1f8;
-  border: solid 2px rgba(158, 61, 238, 0.63);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a03ff0), to(rgba(84, 29, 139, 0.788)));
+  background-image: linear-gradient(to bottom right, #a03ff0, rgba(84, 29, 139, 0.788));
   padding: 0.5rem 2rem;
   margin-top: 5rem;
 }
 
 .movie-reviews div {
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 footer {
