--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 
+
+
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +13,12 @@
 }
 $bgcolor: rgb(10, 10, 14);
 $contrastColor: rgb(14, 14, 17);
+
+$background: #e74c3c;
+$select-color: #fff;
+$select-background: rgba(24, 23, 29, 0.89);
+$select-width: 140px;
+$select-height:  40px;
 
 body {
   background-color: $bgcolor;
@@ -68,6 +77,7 @@ header {
       padding: 0.5rem;
       width: 140px;
       margin: 1px;
+      height: 40px;
       transition: 0.1s ease-in-out;
       &:hover {
         border: solid 1px rgb(111, 65, 148);
@@ -80,17 +90,19 @@ header {
       cursor: pointer;
       width: 75px;
       padding: 0.5rem;
+      height: 40px;
       background-color: transparent;
       color: rgba(230, 207, 245, 0.644);
       letter-spacing: 1px;
       margin-left: 3px;
-      border: solid 1px rgba(53, 50, 66, 0.863);
       border: none;
       color: rgb(230, 207, 245);
       border-radius: 0.1rem;
       letter-spacing: 1px;
-      font-size: 0.8rem;
-      // background-color: rgb(158, 61, 238);
+      font-weight: 100;
+      // font-size: 0.8rem;
+      font-size: 1.1rem;
+      font-family: "Bebas Neue", cursive;
       background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
     }
   }
@@ -108,6 +120,7 @@ header {
     width: 500px;
     color: rgba(222, 220, 231, 0.849);
     transition: 0.1s ease-in-out;
+    height: 40px;
   }
 
   input:focus {
@@ -124,6 +137,10 @@ header {
     font-size: 1.2rem;
     color: rgba(78, 69, 85, 0.644);
   }
+
+
+
+  
 }
 
 //rgba(34, 33, 33, 0.733),rgba(113, 34, 165, 0.329)),
@@ -271,7 +288,8 @@ main {
         border-radius: 0.1rem;
         color: rgb(230, 207, 245);
         letter-spacing: 1px;
-        font-size: 0.8rem;
+        font-family: "Bebas Neue", cursive;
+        font-size: 1.3rem;
         transition: 0.3s ease;
       }
     }
@@ -416,6 +434,25 @@ main {
 }
 
 //DETAILS SECTION
+.movie-trailer{
+  margin-bottom: 1.5rem;
+  a{
+    cursor: pointer;
+    background-color: transparent;
+    color: rgb(238, 225, 248);
+    padding: 0.6rem 2rem;
+    border: none;
+    margin-top: 1rem;
+    letter-spacing: 1px;
+    color: rgb(230, 207, 245);
+    letter-spacing: 2px;
+    font-family: "Bebas Neue", cursive;
+    font-size: 1.3rem;
+    // background-color: rgb(158, 61, 238);
+    background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
+  }
+}
+
 #movie-banner {
   width: 100vw;
   margin: 0 auto;
@@ -432,16 +469,18 @@ main {
   display: none;
 }
 
+}
+
 a{
   text-decoration: none;
   color: rgba(230, 207, 245, 0.911);
   letter-spacing: 1px;
-  font-size: 0.9rem;
+  font-family: "Bebas Neue", cursive;
+  font-size: 1.3rem;
   background-color: transparent;
   // border: solid 1px rgba(53, 50, 66, 0.863);
   background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
   padding: 0.5rem 1rem;
-}
 }
 
 #movie-detail{
@@ -452,15 +491,11 @@ a{
   display: flex;
   width: 100%;
   justify-content: space-between;
-  
-
   ul{
     list-style: none;
   }
 
   .poster-movie{
-    // position: absolute;
-    // top: -100px;
     width: 100%;
     span{
       position: absolute;
@@ -475,6 +510,7 @@ a{
       position: absolute;
       top: -80px;
     }
+
     .bgimg{
       position: absolute;
       right: 105px;
@@ -509,7 +545,7 @@ a{
     }
 
     .detail-info{
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       margin-bottom: 1rem;
       li{
         .contrast{
@@ -517,23 +553,13 @@ a{
           font-weight: bold;
           letter-spacing: 1px;
           color: rgb(238, 225, 248);
+          // font-family: "Anton", sans-serif;
         }
       }
     }
 
-    button{
-      cursor: pointer;
-      background-color: transparent;
-      color: rgb(238, 225, 248);
-      padding: 0.6rem 2rem;
-      border: none;
-      margin-top: 1rem;
-      letter-spacing: 1px;
-      color: rgb(230, 207, 245);
-      letter-spacing: 2px;
-      font-size: 0.9rem;
-      // background-color: rgb(158, 61, 238);
-      background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
+    .title-section {
+      margin-top: 3rem;
     }
 
     .similar-movies{
@@ -543,8 +569,12 @@ a{
       width: 520px;
       margin-top: 0.5rem;
       div{
+        p{
+          font-size: 0.8rem;
+          text-align: center;
+        }
         img{
-          width: 150px;
+          width: 180px;
         }
       }
     }
@@ -563,19 +593,19 @@ a{
 
 .movie-reviews{
   background-color: rgb(30, 30, 61);
-  background-image:  linear-gradient(to bottom right, rgb(21, 12, 26), rgba(46, 18, 80, 0.788));
-  background-image:  linear-gradient(to bottom right, rgb(21, 14, 24), rgba(10, 7, 12, 0.788));
+  background-image:  linear-gradient(to bottom right, rgb(19, 12, 22), rgba(46, 18, 80, 0.788));
+  background-image:  linear-gradient(to bottom right, rgb(13, 13, 19), rgba(20, 14, 22, 0.884));
   border: solid 1px rgb(18, 18, 24);;
-  padding: 4rem;
+  padding: 1rem 2rem;
   margin-top: 1rem;
   height: 500px;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow-y: scroll;
+  // overflow-x: hidden;
+  scrollbar-color: rgb(160, 63, 240) rgba(26, 23, 31, 0.363);
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
 
-  ::-webkit-scrollbar {
-    width: 120px;
-    background-color: red;
-  }
 
   h1{
     margin-bottom: 1rem;
@@ -594,17 +624,55 @@ a{
     background-image:  linear-gradient(to bottom right, rgb(160, 63, 240), rgba(84, 29, 139, 0.788));
     padding: 0.5rem 2rem;
     margin-top: 5rem;
+    // margin-bottom: 1rem;
   }
   
   div{
     margin-top: 0rem;
-    margin-bottom: 3rem;
+    // margin-bottom: 30rem;
+    padding: 2rem 0;
   }
 }
 
+//scrollbar chrome
+.movie-reviews::-webkit-scrollbar {
+  width: 10px;
+}
+ 
+.movie-reviews::-webkit-scrollbar-track {
+  background: rgba(26, 23, 31, 0.952);
+}
+ 
+.movie-reviews::-webkit-scrollbar-thumb {
+  background: rgb(160, 63, 240);
+}
 
+//fade magnificpopup
+.mfp-fade.mfp-bg {
+	opacity: 0;
+	-webkit-transition: all 0.15s ease-out; 
+	-moz-transition: all 0.15s ease-out; 
+	transition: all 0.15s ease-out;
+}
+.mfp-fade.mfp-bg.mfp-ready {
+	opacity: 0.9;
+}
+.mfp-fade.mfp-bg.mfp-removing {
+	opacity: 0;
+}
 
-
+.mfp-fade.mfp-wrap .mfp-content {
+	opacity: 0;
+	-webkit-transition: all 0.15s ease-out; 
+	-moz-transition: all 0.15s ease-out; 
+	transition: all 0.15s ease-out;
+}
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+	opacity: 1;
+}
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+	opacity: 0;
+}
 
 
 
@@ -657,3 +725,6 @@ footer {
   display: none;
 }
 
+// .filter-options{
+//   display: flex;
+// }
